--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,29 +1,47 @@
-version: '3.8'
+version: '3.9'
 
 services:
   app:
-    image: php:8.1-fpm
-    container_name: laravel_app
-    working_dir: /var/www
-    volumes:
-      - ./src:/var/www
-      - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
+    build: .
+    expose:
+      - "9000"  # Laravel работает на порту PHP-FPM
+    depends_on:
+      - db
     networks:
-      - laravel
-
-  webserver:
-    image: nginx:alpine
-    container_name: laravel_webserver
-    ports:
-      - "8080:80"
+      - app-network
     volumes:
-      - ./src:/var/www
-      - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - .:/var/www/html  # Монтируем проект внутрь контейнера
+      - ./static:/var/www/html/public/static  # Пример для статических файлов
+
+  db:
+    image: postgres:15-alpine
+    environment:
+      POSTGRES_DB: school_db
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5434:5432"  # Подключение к PostgreSQL через порт 5434
+    volumes:
+      - db_data:/var/lib/postgresql/data
+      - ./postgresql.conf:/etc/postgresql/postgresql.conf
+    networks:
+      - app-network
+    command: ["postgres", "-c", "config_file=/etc/postgresql/postgresql.conf"]
+
+  nginx:
+    image: nginx:alpine
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf  # Конфигурация NGINX
+      - .:/var/www/html  # Прокси NGINX к Laravel-приложению
+    ports:
+      - "8080:80"  # NGINX будет доступен на порту 8080
     depends_on:
       - app
     networks:
-      - laravel
+      - app-network
+
+volumes:
+  db_data:
 
 networks:
-  laravel:
-    driver: bridge
+  app-network:
