--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,47 +1,49 @@
-version: '3.9'
+version: '3.8'
 
 services:
   app:
-    build: .
-    expose:
-      - "9000"  # Laravel работает на порту PHP-FPM
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: publishing_app
+    working_dir: /var/www/html
+    volumes:
+      - .:/var/www/html
+    networks:
+      - laravel_network
     depends_on:
       - db
-    networks:
-      - app-network
+
+  webserver:
+    image: nginx:alpine
+    container_name: publishing_nginx
     volumes:
-      - .:/var/www/html  # Монтируем проект внутрь контейнера
-      - ./static:/var/www/html/public/static  # Пример для статических файлов
+      - .:/var/www/html
+      - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "8080:80"
+    networks:
+      - laravel_network
+    depends_on:
+      - app
 
   db:
-    image: postgres:15-alpine
+    image: postgres:alpine3.20
+    container_name: publishing_db
     environment:
-      POSTGRES_DB: publishing
+      POSTGRES_DB: publishing_db
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
     ports:
-      - "5440:5442"  # Подключение к PostgreSQL через порт 5434
+      - "5440:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
-      - ./postgresql.conf:/etc/postgresql/postgresql.conf
     networks:
-      - app-network
-    command: ["postgres", "-c", "config_file=/etc/postgresql/postgresql.conf"]
+      - laravel_network
 
-  nginx:
-    image: nginx:alpine
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf  # Конфигурация NGINX
-      - .:/var/www/html  # Прокси NGINX к Laravel-приложению
-    ports:
-      - "8080:80"  # NGINX будет доступен на порту 8080
-    depends_on:
-      - app
-    networks:
-      - app-network
+networks:
+  laravel_network:
+    driver: bridge
 
 volumes:
   db_data:
-
-networks:
-  app-network:
